--- a/index.html
+++ b/index.html
@@ -72,7 +72,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-70"></div>
+                <div class="col-70">
+                    <div class="chat-screen">
+                        <div class="sent-message">Ciao
+                            <div class="date-message">
+                                ora
+                            </div>
+                        </div>
+                        <div class="received-message">Ciao
+                            <div class="date-message">
+                                alle 14:45
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-chat-container">
+                        <div><i class="fa-regular fa-face-smile"></i></div>
+                        <input type="text" placeholder="Scrivi un messaggio">
+                        <div><i class="fa-solid fa-microphone"></i></div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
