--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="input-chat-container">
                         <div><i class="fa-regular fa-face-smile"></i></div>
-                        <input type="text" placeholder="Scrivi un messaggio">
+                        <input type="text" placeholder="Scrivi un messaggio" v-model="newMessage" @keyup.enter="sendNewMessage(this.newMessage)">
                         <div><i class="fa-solid fa-microphone"></i></div>
                     </div>
                 </div>
